# dracarys

./: .Rbuildignore  .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.html  DESCRIPTION  Dockerfile  LICENSE  LICENSE-text.html  LICENSE.html  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  README.qmd  _pkgdown.yaml  authors.html  dracarys.Rproj  index.html  pkgdown.yml  search.json  setup.cfg  sitemap.xml
.dvc/: config
R/: ContigMeanCovFile.R  CoverageContigFile.R  CoverageHistFile.R  CoverageMetricsFile.R  File.R  FineHistFile.R  FragmentLength.R  FragmentLengthFile.R  FragmentLengthHistFile.R  MappingMetrics.R  MappingMetricsFile.R  PloidyEstimationMetrics.R  PloidyEstimationMetricsFile.R  Replay.R  ReplayFile.R  TblSchema.R  TimeMetricsFile.R  VCMetricsFile.R  VarcallMetricsFile.R  Wf.R  Workflow.R  aws.R  bcftools_stats.R  bclconvert.R  db.R  dracarys-package.R  dragen.R  dragen_fastqc.R  fs_icav1.R  fs_local.R  fs_s3.R  ica.R  multiqc.R  pcgr.R  portal_meta.R  read.R  regex.R  rmd.R  s3.R  sash.R  (+10 more)
articles/: NEWS.html  developers.html  files.html  flames.html  index.html
aws/: README.Rmd  README.md  cdk.json  package.json
conda/: env.yml
data-raw/: portal_meta.R
dracarys/: main.py  roar.py
inst/: .gitignore
man/: BcftoolsStatsFile.Rd  BclconvertReports.Rd  BclconvertReports375.Rd  ContigMeanCovFile.Rd  CoverageContigFile.Rd  CoverageHistFile.Rd  CoverageMetricsFile.Rd  FastqcMetricsFile.Rd  File.Rd  FineHistFile.Rd  FragmentLength.Rd  FragmentLengthFile.Rd  FragmentLengthHistFile.Rd  (+163 more)
(+263 files in other folders)
