[metadata]
name = woofy
version = 0.0.1
author = Peter Diakumis
author_email = peterdiakumis@gmail.com
description = A Python library for postprocessing somatic workflow results
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/umccr/woofy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:

[options.entry_points]
console_scripts =
    woofy = woofy.main:cli
