[metadata]
name = dracarys
version = file: dracarys/_version.py
author = Peter Diakumis
author_email = peterdiakumis@gmail.com
description = Post-processing DRAGEN workflows.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/umccr/dracarys
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:

[options.entry_points]
console_scripts =
    dracarys = dracarys.main:cli
